tests/suite/fail/regression/reg_move_2.ny
fn take(x: string) -> void { print(x) }
fn main() {
    let s = "r2"
    take(s)
    print(s) //~ ERROR was moved
}
